Full UI revamp and deploy

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$color-bg: #e8eaf3;
+$color-bg: white;
 $color-nm-light: #ffffff;
 $color-nm-dark: #c5c7cf;
 
@@ -8,3 +8,6 @@ $color-nm-light-on: #90c3fa;
 $color-nm-dark-on: #2e6cca;
 
 $color-label: rgb(124, 124, 124);
+$color-text-dark: black;
+$color-text-light: #eee;
+$color-text-primary: #6a6a6a;
